# SpiritMusic-player

./: .gitignore  App.qml  CMakeLists.txt  Main.qml  aes.cpp  aes.h  clipboardextension.h  icons.qrc  jsonfile.cpp  jsonfile.h  main.cpp  qml.qrc  qmldir  serialgenerator.cpp  serialgenerator.h  sonegx-video-player.desktop  utils.cpp  utils.h  utilsandroid.cpp  utilsandroid.h  utilsunix.cpp  utilsunix.h  utilswin.h
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/drawable-anydpi-v26/: icon.xml
android/res/values/: styles.xml
android/src/org/sonegx/sonegxplayer/: MyUtils.java
qml/: Database.js  Main.qml
qml/Views/: LibraryView.qml  LoginView2.qml  SettingsView.qml  VideoPlayer.qml  VideosView.qml
qml/controls/: FooterBtn.qml
src/: CMakeLists.txt  README.md  appsonegx-player-android_qml_module_dir_map.qrc  icons.qrc  main.cpp
src/android/: AndroidManifest.xml
src/android/src/org/sonegx/sonegxplayer/: MyUtils.java
src/core/: clipboardextension.cpp  jsonfile.cpp  serialgenerator.h
src/qml/: Main.qml
src/qml/Views/: LibraryView.qml  SettingsView.qml  VideoPlayer.qml  VideosView.qml
src/utils/android/: utilsandroid.cpp  utilsandroid.h
src/utils/unix/: utilsunix.cpp
src/utils/windows/: utilswin.cpp
